flask.log
 * Serving Flask app 'app.py'
 * Debug mode: off
2025-12-28 11:41:28,870 [INFO] [31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:5002
2025-12-28 11:41:28,871 [INFO] [33mPress CTRL+C to quit[0m
2025-12-28 11:42:18,383 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:18] "GET /api/system/status HTTP/1.1" 200 -
2025-12-28 11:42:18,412 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:18] "GET /api/jobs/latest HTTP/1.1" 200 -
2025-12-28 11:42:18,427 [ERROR] Exception on /admin/observability [GET]
Traceback (most recent call last):
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "/home/pi50001_admin/SetuV3/modules/scheduler/routes.py", line 14, in observability_dashboard
    return render_template('observability.html')
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "/home/pi50001_admin/SetuV3/venv/lib/python3.13/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/pi50001_admin/SetuV3/templates/observability.html", line 73, in template
    <td class="p-2 text-sm">{{ job.last_run || 'Never' }}</td>
    
jinja2.exceptions.TemplateSyntaxError: expected token 'name', got '|'
2025-12-28 11:42:18,431 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:18] "[35m[1mGET /admin/observability HTTP/1.1[0m" 500 -
2025-12-28 11:42:47,925 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:47] "GET /?id=7cb85a83-00f5-43bc-b0b5-f4fc37724833&vscodeBrowserReqId=1766902367260 HTTP/1.1" 200 -
2025-12-28 11:42:48,134 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:48] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:42:48,301 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:48] "[33mGET /api/scheduler/status HTTP/1.1[0m" 404 -
2025-12-28 11:42:52,979 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:52] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:42:58,346 [INFO] 127.0.0.1 - - [28/Dec/2025 11:42:58] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:02,982 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:02] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:08,342 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:08] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:10,383 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:10] "[33mGET /admin/scheduler HTTP/1.1[0m" 404 -
2025-12-28 11:43:15,146 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:15] "GET /admin/observability HTTP/1.1" 200 -
2025-12-28 11:43:25,119 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:25] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:30,105 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:30] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:34,755 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:34] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:40,103 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:40] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:44,761 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:44] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:50,092 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:50] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:43:50,097 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:50] "[33mGET /api/scheduler/status HTTP/1.1[0m" 404 -
2025-12-28 11:43:54,768 [INFO] 127.0.0.1 - - [28/Dec/2025 11:43:54] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:44:00,103 [INFO] 127.0.0.1 - - [28/Dec/2025 11:44:00] "GET /api/system_stats HTTP/1.1" 200 -
2025-12-28 11:44:05,102 [INFO] 127.0.0.1 - - [28/Dec/2025 11:44:05] "GET /api/system_stats HTTP/1.1" 200 -
